Compilar_Design LAB/Assignment_3_CSB039/y.output
Terminals which are not used

   BNOT_TOK
   NOT_TOK
   AND_TOK
   OR_TOK
   XOR_TOK
   LBRACKET_TOK
   RBRACKET_TOK
   SINGLE_QUOTE_TOK
   DOUBLE_QUOTE_TOK
   DO_TOK
   BREAK_TOK
   CONTINUE_TOK
   SWITCH_TOK
   CASE_TOK
   LOG_AND_TOK
   LOG_OR_TOK


Rules never reduced

   51 condition: expression relational_op expression


State 22 conflicts: 2 reduce/reduce
State 25 conflicts: 1 shift/reduce
State 27 conflicts: 1 shift/reduce
State 62 conflicts: 18 shift/reduce
State 63 conflicts: 18 shift/reduce, 2 reduce/reduce
State 71 conflicts: 18 shift/reduce


Grammar

    0 $accept: S $end

    1 S: S statement
    2  | S main
    3  | S function
    4  | statement
    5  | main
    6  | function

    7 main: datatype MAIN_TOK LPAREN_TOK RPAREN_TOK block

    8 block: LBRACE_TOK statements blocks RBRACE_TOK

    9 blocks: block statements blocks
   10       | /* empty */

   11 statements: statements statement
   12           | statements if_statement
   13           | statements for_statement
   14           | statements while_statement
   15           | /* empty */

   16 statement: operation SEMICOLON_TOK
   17          | return_statement

   18 operation: declaration
   19          | assignment
   20          | expression
   21          | condition

   22 declaration: datatype id_token

   23 assignment: datatype id_token EQ_TOK expression
   24           | id_token EQ_TOK expression

   25 return_statement: RETURN_TOK expression SEMICOLON_TOK

   26 function: datatype id_token LPAREN_TOK params RPAREN_TOK block

   27 params: datatype id_token COMMA_TOK params
   28       | datatype id_token
   29       | /* empty */

   30 function_call: id_token LPAREN_TOK args RPAREN_TOK

   31 args: expression COMMA_TOK args
   32     | expression
   33     | /* empty */

   34 expression: function_call
   35           | id_token
   36           | INTCONST
   37           | FLOATCONST
   38           | CHARCONST
   39           | STRCONST
   40           | SEMICOLON_TOK
   41           | LPAREN_TOK expression RPAREN_TOK
   42           | expression arithmetic_op expression
   43           | expression relational_op expression
   44           | expression PLUS_PLUS_TOK
   45           | expression MINUS_MINUS_TOK

   46 if_statement: IF_TOK LPAREN_TOK condition RPAREN_TOK block
   47             | IF_TOK LPAREN_TOK condition RPAREN_TOK block ELSE_TOK block
   48             | IF_TOK LPAREN_TOK condition RPAREN_TOK block ELSE_TOK if_statement

   49 for_statement: FOR_TOK LPAREN_TOK operation SEMICOLON_TOK operation SEMICOLON_TOK operation RPAREN_TOK block

   50 while_statement: WHILE_TOK LPAREN_TOK condition RPAREN_TOK block

   51 condition: expression relational_op expression
   52          | expression

   53 arithmetic_op: PLUS_TOK
   54              | MINUS_TOK
   55              | MULT_TOK
   56              | DIV_TOK
   57              | MOD_TOK
   58              | PLUS_EQ_TOK
   59              | MINUS_EQ_TOK
   60              | MULT_EQ_TOK
   61              | DIV_EQ_TOK
   62              | MOD_EQ_TOK

   63 relational_op: LT_TOK
   64              | GT_TOK
   65              | EQ_TOK
   66              | LT_EQ_TOK
   67              | GT_EQ_TOK
   68              | EQ_EQ_TOK

   69 datatype: INT_TOK
   70         | VOID_TOK
   71         | CHAR_TOK
   72         | FLOAT_TOK

   73 id_token: id_token COMMA_TOK ID_TOK
   74         | ID_TOK


Terminals, with rules where they appear

$end (0) 0
error (256)
LT_TOK (258) 63
GT_TOK (259) 64
EQ_TOK (260) 23 24 65
MINUS_TOK (261) 54
PLUS_TOK (262) 53
MULT_TOK (263) 55
DIV_TOK (264) 56
MOD_TOK (265) 57
BNOT_TOK (266)
NOT_TOK (267)
AND_TOK (268)
OR_TOK (269)
XOR_TOK (270)
LBRACE_TOK (271) 8
RBRACE_TOK (272) 8
LBRACKET_TOK (273)
RBRACKET_TOK (274)
LPAREN_TOK (275) 7 26 30 41 46 47 48 49 50
RPAREN_TOK (276) 7 26 30 41 46 47 48 49 50
SEMICOLON_TOK (277) 16 25 40 49
COMMA_TOK (278) 27 31 73
SINGLE_QUOTE_TOK (279)
DOUBLE_QUOTE_TOK (280)
MAIN_TOK (281) 7
WHILE_TOK (282) 50
DO_TOK (283)
FOR_TOK (284) 49
BREAK_TOK (285)
CONTINUE_TOK (286)
IF_TOK (287) 46 47 48
ELSE_TOK (288) 47 48
SWITCH_TOK (289)
CASE_TOK (290)
VOID_TOK (291) 70
INT_TOK (292) 69
FLOAT_TOK (293) 72
CHAR_TOK (294) 71
RETURN_TOK (295) 25
ID_TOK (296) 73 74
LT_EQ_TOK (297) 66
GT_EQ_TOK (298) 67
EQ_EQ_TOK (299) 68
PLUS_EQ_TOK (300) 58
MINUS_EQ_TOK (301) 59
MULT_EQ_TOK (302) 60
DIV_EQ_TOK (303) 61
MOD_EQ_TOK (304) 62
PLUS_PLUS_TOK (305) 44
MINUS_MINUS_TOK (306) 45
LOG_AND_TOK (307)
LOG_OR_TOK (308)
INTCONST (309) 36
FLOATCONST (310) 37
CHARCONST (311) 38
STRCONST (312) 39


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
S (59)
    on left: 1 2 3 4 5 6, on right: 0 1 2 3
main (60)
    on left: 7, on right: 2 5
block (61)
    on left: 8, on right: 7 9 26 46 47 48 49 50
blocks (62)
    on left: 9 10, on right: 8 9
statements (63)
    on left: 11 12 13 14 15, on right: 8 9 11 12 13 14
statement (64)
    on left: 16 17, on right: 1 4 11
operation (65)
    on left: 18 19 20 21, on right: 16 49
declaration (66)
    on left: 22, on right: 18
assignment (67)
    on left: 23 24, on right: 19
return_statement (68)
    on left: 25, on right: 17
function (69)
    on left: 26, on right: 3 6
params (70)
    on left: 27 28 29, on right: 26 27
function_call (71)
    on left: 30, on right: 34
args (72)
    on left: 31 32 33, on right: 30 31
expression (73)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45, on right: 20 23 24
    25 31 32 41 42 43 44 45 51 52
if_statement (74)
    on left: 46 47 48, on right: 12 48
for_statement (75)
    on left: 49, on right: 13
while_statement (76)
    on left: 50, on right: 14
condition (77)
    on left: 51 52, on right: 21 46 47 48 50
arithmetic_op (78)
    on left: 53 54 55 56 57 58 59 60 61 62, on right: 42
relational_op (79)
    on left: 63 64 65 66 67 68, on right: 43 51
datatype (80)
    on left: 69 70 71 72, on right: 7 22 23 26 27 28
id_token (81)
    on left: 73 74, on right: 22 23 24 26 27 28 30 35 73


state 0

    0 $accept: . S $end

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    VOID_TOK       shift, and go to state 3
    INT_TOK        shift, and go to state 4
    FLOAT_TOK      shift, and go to state 5
    CHAR_TOK       shift, and go to state 6
    RETURN_TOK     shift, and go to state 7
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    S                 go to state 13
    main              go to state 14
    statement         go to state 15
    operation         go to state 16
    declaration       go to state 17
    assignment        go to state 18
    return_statement  go to state 19
    function          go to state 20
    function_call     go to state 21
    expression        go to state 22
    condition         go to state 23
    datatype          go to state 24
    id_token          go to state 25


state 1

   41 expression: LPAREN_TOK . expression RPAREN_TOK

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 26
    id_token       go to state 27


state 2

   40 expression: SEMICOLON_TOK .

    $default  reduce using rule 40 (expression)


state 3

   70 datatype: VOID_TOK .

    $default  reduce using rule 70 (datatype)


state 4

   69 datatype: INT_TOK .

    $default  reduce using rule 69 (datatype)


state 5

   72 datatype: FLOAT_TOK .

    $default  reduce using rule 72 (datatype)


state 6

   71 datatype: CHAR_TOK .

    $default  reduce using rule 71 (datatype)


state 7

   25 return_statement: RETURN_TOK . expression SEMICOLON_TOK

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 28
    id_token       go to state 27


state 8

   74 id_token: ID_TOK .

    $default  reduce using rule 74 (id_token)


state 9

   36 expression: INTCONST .

    $default  reduce using rule 36 (expression)


state 10

   37 expression: FLOATCONST .

    $default  reduce using rule 37 (expression)


state 11

   38 expression: CHARCONST .

    $default  reduce using rule 38 (expression)


state 12

   39 expression: STRCONST .

    $default  reduce using rule 39 (expression)


state 13

    0 $accept: S . $end
    1 S: S . statement
    2  | S . main
    3  | S . function

    $end           shift, and go to state 29
    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    VOID_TOK       shift, and go to state 3
    INT_TOK        shift, and go to state 4
    FLOAT_TOK      shift, and go to state 5
    CHAR_TOK       shift, and go to state 6
    RETURN_TOK     shift, and go to state 7
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    main              go to state 30
    statement         go to state 31
    operation         go to state 16
    declaration       go to state 17
    assignment        go to state 18
    return_statement  go to state 19
    function          go to state 32
    function_call     go to state 21
    expression        go to state 22
    condition         go to state 23
    datatype          go to state 24
    id_token          go to state 25


state 14

    5 S: main .

    $default  reduce using rule 5 (S)


state 15

    4 S: statement .

    $default  reduce using rule 4 (S)


state 16

   16 statement: operation . SEMICOLON_TOK

    SEMICOLON_TOK  shift, and go to state 33


state 17

   18 operation: declaration .

    $default  reduce using rule 18 (operation)


state 18

   19 operation: assignment .

    $default  reduce using rule 19 (operation)


state 19

   17 statement: return_statement .

    $default  reduce using rule 17 (statement)


state 20

    6 S: function .

    $default  reduce using rule 6 (S)


state 21

   34 expression: function_call .

    $default  reduce using rule 34 (expression)


state 22

   20 operation: expression .
   42 expression: expression . arithmetic_op expression
   43           | expression . relational_op expression
   44           | expression . PLUS_PLUS_TOK
   45           | expression . MINUS_MINUS_TOK
   51 condition: expression . relational_op expression
   52          | expression .

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    RPAREN_TOK     reduce using rule 20 (operation)
    RPAREN_TOK     [reduce using rule 52 (condition)]
    SEMICOLON_TOK  reduce using rule 20 (operation)
    SEMICOLON_TOK  [reduce using rule 52 (condition)]
    $default       reduce using rule 20 (operation)

    arithmetic_op  go to state 52
    relational_op  go to state 53


state 23

   21 operation: condition .

    $default  reduce using rule 21 (operation)


state 24

    7 main: datatype . MAIN_TOK LPAREN_TOK RPAREN_TOK block
   22 declaration: datatype . id_token
   23 assignment: datatype . id_token EQ_TOK expression
   26 function: datatype . id_token LPAREN_TOK params RPAREN_TOK block

    MAIN_TOK  shift, and go to state 54
    ID_TOK    shift, and go to state 8

    id_token  go to state 55


state 25

   24 assignment: id_token . EQ_TOK expression
   30 function_call: id_token . LPAREN_TOK args RPAREN_TOK
   35 expression: id_token .
   73 id_token: id_token . COMMA_TOK ID_TOK

    EQ_TOK      shift, and go to state 56
    LPAREN_TOK  shift, and go to state 57
    COMMA_TOK   shift, and go to state 58

    EQ_TOK    [reduce using rule 35 (expression)]
    $default  reduce using rule 35 (expression)


state 26

   41 expression: LPAREN_TOK expression . RPAREN_TOK
   42           | expression . arithmetic_op expression
   43           | expression . relational_op expression
   44           | expression . PLUS_PLUS_TOK
   45           | expression . MINUS_MINUS_TOK

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    RPAREN_TOK       shift, and go to state 59
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 27

   30 function_call: id_token . LPAREN_TOK args RPAREN_TOK
   35 expression: id_token .
   73 id_token: id_token . COMMA_TOK ID_TOK

    LPAREN_TOK  shift, and go to state 57
    COMMA_TOK   shift, and go to state 58

    COMMA_TOK  [reduce using rule 35 (expression)]
    $default   reduce using rule 35 (expression)


state 28

   25 return_statement: RETURN_TOK expression . SEMICOLON_TOK
   42 expression: expression . arithmetic_op expression
   43           | expression . relational_op expression
   44           | expression . PLUS_PLUS_TOK
   45           | expression . MINUS_MINUS_TOK

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    SEMICOLON_TOK    shift, and go to state 61
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 29

    0 $accept: S $end .

    $default  accept


state 30

    2 S: S main .

    $default  reduce using rule 2 (S)


state 31

    1 S: S statement .

    $default  reduce using rule 1 (S)


state 32

    3 S: S function .

    $default  reduce using rule 3 (S)


state 33

   16 statement: operation SEMICOLON_TOK .

    $default  reduce using rule 16 (statement)


state 34

   63 relational_op: LT_TOK .

    $default  reduce using rule 63 (relational_op)


state 35

   64 relational_op: GT_TOK .

    $default  reduce using rule 64 (relational_op)


state 36

   65 relational_op: EQ_TOK .

    $default  reduce using rule 65 (relational_op)


state 37

   54 arithmetic_op: MINUS_TOK .

    $default  reduce using rule 54 (arithmetic_op)


state 38

   53 arithmetic_op: PLUS_TOK .

    $default  reduce using rule 53 (arithmetic_op)


state 39

   55 arithmetic_op: MULT_TOK .

    $default  reduce using rule 55 (arithmetic_op)


state 40

   56 arithmetic_op: DIV_TOK .

    $default  reduce using rule 56 (arithmetic_op)


state 41

   57 arithmetic_op: MOD_TOK .

    $default  reduce using rule 57 (arithmetic_op)


state 42

   66 relational_op: LT_EQ_TOK .

    $default  reduce using rule 66 (relational_op)


state 43

   67 relational_op: GT_EQ_TOK .

    $default  reduce using rule 67 (relational_op)


state 44

   68 relational_op: EQ_EQ_TOK .

    $default  reduce using rule 68 (relational_op)


state 45

   58 arithmetic_op: PLUS_EQ_TOK .

    $default  reduce using rule 58 (arithmetic_op)


state 46

   59 arithmetic_op: MINUS_EQ_TOK .

    $default  reduce using rule 59 (arithmetic_op)


state 47

   60 arithmetic_op: MULT_EQ_TOK .

    $default  reduce using rule 60 (arithmetic_op)


state 48

   61 arithmetic_op: DIV_EQ_TOK .

    $default  reduce using rule 61 (arithmetic_op)


state 49

   62 arithmetic_op: MOD_EQ_TOK .

    $default  reduce using rule 62 (arithmetic_op)


state 50

   44 expression: expression PLUS_PLUS_TOK .

    $default  reduce using rule 44 (expression)


state 51

   45 expression: expression MINUS_MINUS_TOK .

    $default  reduce using rule 45 (expression)


state 52

   42 expression: expression arithmetic_op . expression

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 62
    id_token       go to state 27


state 53

   43 expression: expression relational_op . expression
   51 condition: expression relational_op . expression

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 63
    id_token       go to state 27


state 54

    7 main: datatype MAIN_TOK . LPAREN_TOK RPAREN_TOK block

    LPAREN_TOK  shift, and go to state 64


state 55

   22 declaration: datatype id_token .
   23 assignment: datatype id_token . EQ_TOK expression
   26 function: datatype id_token . LPAREN_TOK params RPAREN_TOK block
   73 id_token: id_token . COMMA_TOK ID_TOK

    EQ_TOK      shift, and go to state 65
    LPAREN_TOK  shift, and go to state 66
    COMMA_TOK   shift, and go to state 58

    $default  reduce using rule 22 (declaration)


state 56

   24 assignment: id_token EQ_TOK . expression

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 67
    id_token       go to state 27


state 57

   30 function_call: id_token LPAREN_TOK . args RPAREN_TOK

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    $default  reduce using rule 33 (args)

    function_call  go to state 21
    args           go to state 68
    expression     go to state 69
    id_token       go to state 27


state 58

   73 id_token: id_token COMMA_TOK . ID_TOK

    ID_TOK  shift, and go to state 70


state 59

   41 expression: LPAREN_TOK expression RPAREN_TOK .

    $default  reduce using rule 41 (expression)


state 60

   43 expression: expression relational_op . expression

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 71
    id_token       go to state 27


state 61

   25 return_statement: RETURN_TOK expression SEMICOLON_TOK .

    $default  reduce using rule 25 (return_statement)


state 62

   42 expression: expression . arithmetic_op expression
   42           | expression arithmetic_op expression .
   43           | expression . relational_op expression
   44           | expression . PLUS_PLUS_TOK
   45           | expression . MINUS_MINUS_TOK

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    LT_TOK           [reduce using rule 42 (expression)]
    GT_TOK           [reduce using rule 42 (expression)]
    EQ_TOK           [reduce using rule 42 (expression)]
    MINUS_TOK        [reduce using rule 42 (expression)]
    PLUS_TOK         [reduce using rule 42 (expression)]
    MULT_TOK         [reduce using rule 42 (expression)]
    DIV_TOK          [reduce using rule 42 (expression)]
    MOD_TOK          [reduce using rule 42 (expression)]
    LT_EQ_TOK        [reduce using rule 42 (expression)]
    GT_EQ_TOK        [reduce using rule 42 (expression)]
    EQ_EQ_TOK        [reduce using rule 42 (expression)]
    PLUS_EQ_TOK      [reduce using rule 42 (expression)]
    MINUS_EQ_TOK     [reduce using rule 42 (expression)]
    MULT_EQ_TOK      [reduce using rule 42 (expression)]
    DIV_EQ_TOK       [reduce using rule 42 (expression)]
    MOD_EQ_TOK       [reduce using rule 42 (expression)]
    PLUS_PLUS_TOK    [reduce using rule 42 (expression)]
    MINUS_MINUS_TOK  [reduce using rule 42 (expression)]
    $default         reduce using rule 42 (expression)

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 63

   42 expression: expression . arithmetic_op expression
   43           | expression . relational_op expression
   43           | expression relational_op expression .
   44           | expression . PLUS_PLUS_TOK
   45           | expression . MINUS_MINUS_TOK
   51 condition: expression relational_op expression .

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    LT_TOK           [reduce using rule 43 (expression)]
    GT_TOK           [reduce using rule 43 (expression)]
    EQ_TOK           [reduce using rule 43 (expression)]
    MINUS_TOK        [reduce using rule 43 (expression)]
    PLUS_TOK         [reduce using rule 43 (expression)]
    MULT_TOK         [reduce using rule 43 (expression)]
    DIV_TOK          [reduce using rule 43 (expression)]
    MOD_TOK          [reduce using rule 43 (expression)]
    RPAREN_TOK       reduce using rule 43 (expression)
    RPAREN_TOK       [reduce using rule 51 (condition)]
    SEMICOLON_TOK    reduce using rule 43 (expression)
    SEMICOLON_TOK    [reduce using rule 51 (condition)]
    LT_EQ_TOK        [reduce using rule 43 (expression)]
    GT_EQ_TOK        [reduce using rule 43 (expression)]
    EQ_EQ_TOK        [reduce using rule 43 (expression)]
    PLUS_EQ_TOK      [reduce using rule 43 (expression)]
    MINUS_EQ_TOK     [reduce using rule 43 (expression)]
    MULT_EQ_TOK      [reduce using rule 43 (expression)]
    DIV_EQ_TOK       [reduce using rule 43 (expression)]
    MOD_EQ_TOK       [reduce using rule 43 (expression)]
    PLUS_PLUS_TOK    [reduce using rule 43 (expression)]
    MINUS_MINUS_TOK  [reduce using rule 43 (expression)]
    $default         reduce using rule 43 (expression)

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 64

    7 main: datatype MAIN_TOK LPAREN_TOK . RPAREN_TOK block

    RPAREN_TOK  shift, and go to state 72


state 65

   23 assignment: datatype id_token EQ_TOK . expression

    LPAREN_TOK     shift, and go to state 1
    SEMICOLON_TOK  shift, and go to state 2
    ID_TOK         shift, and go to state 8
    INTCONST       shift, and go to state 9
    FLOATCONST     shift, and go to state 10
    CHARCONST      shift, and go to state 11
    STRCONST       shift, and go to state 12

    function_call  go to state 21
    expression     go to state 73
    id_token       go to state 27


state 66

   26 function: datatype id_token LPAREN_TOK . params RPAREN_TOK block

    VOID_TOK   shift, and go to state 3
    INT_TOK    shift, and go to state 4
    FLOAT_TOK  shift, and go to state 5
    CHAR_TOK   shift, and go to state 6

    $default  reduce using rule 29 (params)

    params    go to state 74
    datatype  go to state 75


state 67

   24 assignment: id_token EQ_TOK expression .
   42 expression: expression . arithmetic_op expression
   43           | expression . relational_op expression
   44           | expression . PLUS_PLUS_TOK
   45           | expression . MINUS_MINUS_TOK

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    $default  reduce using rule 24 (assignment)

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 68

   30 function_call: id_token LPAREN_TOK args . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 76


state 69

   31 args: expression . COMMA_TOK args
   32     | expression .
   42 expression: expression . arithmetic_op expression
   43           | expression . relational_op expression
   44           | expression . PLUS_PLUS_TOK
   45           | expression . MINUS_MINUS_TOK

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    COMMA_TOK        shift, and go to state 77
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    $default  reduce using rule 32 (args)

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 70

   73 id_token: id_token COMMA_TOK ID_TOK .

    $default  reduce using rule 73 (id_token)


state 71

   42 expression: expression . arithmetic_op expression
   43           | expression . relational_op expression
   43           | expression relational_op expression .
   44           | expression . PLUS_PLUS_TOK
   45           | expression . MINUS_MINUS_TOK

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    LT_TOK           [reduce using rule 43 (expression)]
    GT_TOK           [reduce using rule 43 (expression)]
    EQ_TOK           [reduce using rule 43 (expression)]
    MINUS_TOK        [reduce using rule 43 (expression)]
    PLUS_TOK         [reduce using rule 43 (expression)]
    MULT_TOK         [reduce using rule 43 (expression)]
    DIV_TOK          [reduce using rule 43 (expression)]
    MOD_TOK          [reduce using rule 43 (expression)]
    LT_EQ_TOK        [reduce using rule 43 (expression)]
    GT_EQ_TOK        [reduce using rule 43 (expression)]
    EQ_EQ_TOK        [reduce using rule 43 (expression)]
    PLUS_EQ_TOK      [reduce using rule 43 (expression)]
    MINUS_EQ_TOK     [reduce using rule 43 (expression)]
    MULT_EQ_TOK      [reduce using rule 43 (expression)]
    DIV_EQ_TOK       [reduce using rule 43 (expression)]
    MOD_EQ_TOK       [reduce using rule 43 (expression)]
    PLUS_PLUS_TOK    [reduce using rule 43 (expression)]
    MINUS_MINUS_TOK  [reduce using rule 43 (expression)]
    $default         reduce using rule 43 (expression)

    arithmetic_op  go to state 52
    relational_op  go to state 60


state 72

    7 main: datatype MAIN_TOK LPAREN_TOK RPAREN_TOK . block

    LBRACE_TOK  shift, and go to state 78

    block  go to state 79


state 73

   23 assignment: datatype id_token EQ_TOK expression .
   42 expression: expression . arithmetic_op expression
   43           | expression . relational_op expression
   44           | expression . PLUS_PLUS_TOK
   45           | expression . MINUS_MINUS_TOK

    LT_TOK           shift, and go to state 34
    GT_TOK           shift, and go to state 35
    EQ_TOK           shift, and go to state 36
    MINUS_TOK        shift, and go to state 37
    PLUS_TOK         shift, and go to state 38
    MULT_TOK         shift, and go to state 39
    DIV_TOK          shift, and go to state 40
    MOD_TOK          shift, and go to state 41
    LT_EQ_TOK        shift, and go to state 42
    GT_EQ_TOK        shift, and go to state 43
    EQ_EQ_TOK        shift, and go to state 44
    PLUS_EQ_TOK      shift, and go to state 45
    MINUS_EQ_TOK     shift, and go to state 46
    MULT_EQ_TOK      shift, and go to state 47
    DIV_EQ_TOK       shift, and go to state 48
    MOD_EQ_TOK       shift, and go to state 49
    PLUS_PLUS_TOK    shift, and go to state 50
    MINUS_MINUS_TOK  shift, and go to state 51

    $default  reduce using rule 23 (assignment)
